                                           of polygon/line.

 - supportFunction.m: Compute support function of a polygon.

 - distancePointPolygon.m, distancePointPolyline.m, distancePolygons.m ,
   expandPolygon.m, medialAxisConvex.m, polygonLoops.m, polygonSelfIntersections.m
   polylineSelfIntersections.m, splitPolygons.m

* Changed functions:
 - distancePointEdge.m: Now the function computes the distance between all points
                        and all edges. A third optional argument provides
                        backward compatibility.

* Solved bugs:
 - simplifypolygon.m returned empty polygons when points are repeated, i.e when
  the polygon is not correctly formed.
 - Removed installation warnings.

===============================================================================
geometry-1.4.1   Release Date: 2012-03-24  Release Manager: Juan Pablo Carbajal
===============================================================================

* Renamed functions
 - Contents.m renamed to geom2d_Contents to avoid clashes.

* Deprecated functions
 - svgload, svgnormalize, svgpath2polygon: Use the methods in class svg.

* Bug fixes
 - @svg/path2polygon.m
 - Fix addpath/rmpath installation warnings
 - Fix octclip/src/Makefile
 - Fix shapecentriod.m for piece-wise polynomial shapes.

* Known issues
 - simplifypolygon.m returns empty polygons when points are repeated, i.e when
  the polygon is not correctly formed.


===============================================================================
geometry-1.4.0   Release Date: 2012-01-25   Release Manager: Juan Pablo Carbajal
===============================================================================

* Added basic geometric graphs creation and manipulation.


===============================================================================
geometry-1.3.0   Release Date: 2011-11-24   Release Manager: Juan Pablo Carbajal
===============================================================================
