@@ -1,7 +1,7 @@
 Name: Geometry
 Version: 1.5.0
 Date: 2012-04-16
-Author: David Legland <david.legland@grignon.inra.fr>, José Luis García Pallero <jgpallero@gmail.com>, Juan Pablo Carbajal <carbajal@ifi.uzh.ch>
+Author: David Legland <david.legland@grignon.inra.fr>, José Luis García Pallero <jgpallero@gmail.com>, Juan Pablo Carbajal <carbajal@ifi.uzh.ch>, Simeon Simeonov <sss41@cam.ac.uk>
 Maintainer: Juan Pablo Carbajal <carbajal@ifi.uzh.ch>
 Title: Computational Geometry
 Description: Library for geometric computing extending MatGeom functions. Useful to create, transform, manipulate and display geometric primitives.
