@@ -30,6 +30,9 @@ geometry-1.5.0   Release Date: 2012-04-16  Release Manager: Juan Pablo Carbajal
    expandPolygon.m, medialAxisConvex.m, polygonLoops.m, polygonSelfIntersections.m
    polylineSelfIntersections.m, splitPolygons.m
 
+ - close_path.m : given a set of points in the plane calculate a piecewise linear
+                  simple path that passes through all points.
+
 * Changed functions:
  - distancePointEdge.m: Now the function computes the distance between all points
                         and all edges. A third optional argument provides
